# selenium-python-automation-portfolio

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: selenium-tests.yml
selenium_portfolio/config/: settings.py
selenium_portfolio/pages/: advanced_page.py  base_page.py  elements_page.py  login_page.py
tests/: conftest.py  test_advanced_interactions.py  test_elements.py  test_login.py
