[tool.poetry]
name = "selenium-python-automation-portfolio"
version = "0.1.0"
description = "Selenium Python Pytest UI automation portfolio for The Internet demo app."
authors = ["Laura Utar"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.27.1"
pytest = "^8.3.4"
pytest-html = "^4.1.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
